Updated ex00 and finished ex01

--- a/d00/ex00/basics.html
+++ b/d00/ex00/basics.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>B.A.BA</title>
+	<title>Basics</title>
 	<style>
 		body {
 			background-color: pink;
@@ -25,7 +25,7 @@
 	</style>
 </head>
 <body>
-	<h1>Great Stores! Do visit!</h1>
+	<h1>Great Stores! Do visit! ∆Ø</h1>
 	<div class="shop">
 		<img src="https://www.epetstore.co.za/image/catalog/logo-new-green.png" alt="">
 		<p><a href="https://www.epetstore.co.za/">ePETstore</a></p>
