--- a/d00/ex01/mendeleiev.html
+++ b/d00/ex01/mendeleiev.html
@@ -7,6 +7,9 @@
 		body {
 			background-color: white;
 		}
+		div {
+			text-align: center;
+		}
 		h1 {
 			text-align: center;
 		}
@@ -18,6 +21,7 @@
 		}
 		h2 {
 			text-align: center;
+			font-weight: bold;
 			margin: 10px;
 		}
 		td {
@@ -60,7 +64,10 @@
 </head>
 <body>
 	<h1>Mendeleïev Periodic Table of Elements</h1>
-	<table contenteditable="true">
+	<div>
+	<img src="https://clickmica.fundaciondescubre.es/files/2016/12/mendeleiev-e1482864598223-768x449.jpg" height=200 alt="">
+	</div>
+	<table align="center" contenteditable="true">
 		<tr>
 			<td class="non-metal"><p class="mass">1.0079</p><h2>H</h2><p>1</p></td>
 			<td colspan="16"></td>
@@ -130,43 +137,43 @@
 		</tr>
 		<tr>
 			<td class="alkali-metal"><p class="mass">132.905</p><h2>Cs</h2><p>55</p></td>
-			<td class="alkaline-earth-metal"><p class="mass"></p><h2>Ba</h2><p>56</p></td>
+			<td class="alkaline-earth-metal"><p class="mass">137.327</p><h2>Ba</h2><p>56</p></td>
 			<td class="lanthanide"><h2>*</h2></td>
-			<td class="transition-metal"><p class="mass"></p><h2>Hf</h2><p>72</p></td>
-			<td class="transition-metal"><p class="mass"></p><h2>Ta</h2><p>73</p></td>
-			<td class="transition-metal"><p class="mass"></p><h2>W</h2><p>74</p></td>
-			<td class="transition-metal"><p class="mass"></p><h2>Re</h2><p>75</p></td>
-			<td class="transition-metal"><p class="mass"></p><h2>Os</h2><p>76</p></td>
-			<td class="transition-metal"><p class="mass"></p><h2>Ir</h2><p>77</p></td>
-			<td class="transition-metal"><p class="mass"></p><h2>Pt</h2><p>78</p></td>
-			<td class="transition-metal"><p class="mass"></p><h2>Au</h2><p>79</p></td>
-			<td class="transition-metal"><p class="mass"></p><h2>Hg</h2><p>80</p></td>
-			<td class="metal"><p class="mass"></p><h2>Tl</h2><p>81</p></td>
-			<td class="metal"><p class="mass"></p><h2>Pb</h2><p>82</p></td>
-			<td class="metal"><p class="mass"></p><h2>Bi</h2><p>83</p></td>
-			<td class="metalloid"><p class="mass"></p><h2>Po</h2><p>84</p></td>
-			<td class="halogen"><p class="mass"></p><h2>At</h2><p>85</p></td>
-			<td class="noble-gas"><p class="mass"></p><h2>Rn</h2><p>86</p></td>
+			<td class="transition-metal"><p class="mass">178.49</p><h2>Hf</h2><p>72</p></td>
+			<td class="transition-metal"><p class="mass">180.9479</p><h2>Ta</h2><p>73</p></td>
+			<td class="transition-metal"><p class="mass">183.84</p><h2>W</h2><p>74</p></td>
+			<td class="transition-metal"><p class="mass">186.207</p><h2>Re</h2><p>75</p></td>
+			<td class="transition-metal"><p class="mass">190.23</p><h2>Os</h2><p>76</p></td>
+			<td class="transition-metal"><p class="mass">192.217</p><h2>Ir</h2><p>77</p></td>
+			<td class="transition-metal"><p class="mass">195.078</p><h2>Pt</h2><p>78</p></td>
+			<td class="transition-metal"><p class="mass">196.9665</p><h2>Au</h2><p>79</p></td>
+			<td class="transition-metal"><p class="mass">200.59</p><h2>Hg</h2><p>80</p></td>
+			<td class="metal"><p class="mass">204.3833</p><h2>Tl</h2><p>81</p></td>
+			<td class="metal"><p class="mass">207.2</p><h2>Pb</h2><p>82</p></td>
+			<td class="metal"><p class="mass">208.9804</p><h2>Bi</h2><p>83</p></td>
+			<td class="metalloid"><p class="mass">(209)</p><h2>Po</h2><p>84</p></td>
+			<td class="halogen"><p class="mass">(210)</p><h2>At</h2><p>85</p></td>
+			<td class="noble-gas"><p class="mass">(222)</p><h2>Rn</h2><p>86</p></td>
 		</tr>
 		<tr>
-			<td class="alkali-metal"><p class="mass"></p><h2>Fr</h2><p>87</p></td>
-			<td class="alkaline-earth-metal"><p class="mass"></p><h2>Ra</h2><p>88</p></td>
+			<td class="alkali-metal"><p class="mass">(223)</p><h2>Fr</h2><p>87</p></td>
+			<td class="alkaline-earth-metal"><p class="mass">(226)</p><h2>Ra</h2><p>88</p></td>
 			<td class="actinide"><h2>**</h2></td>
-			<td class="transition-metal"><p class="mass"></p><h2>Rf</h2><p>104</p></td>
-			<td class="transition-metal"><p class="mass"></p><h2>Db</h2><p>105</p></td>
-			<td class="transition-metal"><p class="mass"></p><h2>Sg</h2><p>106</p></td>
-			<td class="transition-metal"><p class="mass"></p><h2>Bh</h2><p>107</p></td>
-			<td class="transition-metal"><p class="mass"></p><h2>Hs</h2><p>108</p></td>
-			<td class="unknown"><p class="mass"></p><h2>Mt</h2><p>109</p></td>
-			<td class="unknown"><p class="mass"></p><h2>Ds</h2><p>110</p></td>
-			<td class="unknown"><p class="mass"></p><h2>Rg</h2><p>111</p></td>
-			<td class="transition-metal"><p class="mass"></p><h2>Cn</h2><p>112</p></td>
-			<td class="unknown"><p class="mass"></p><h2>Uut</h2><p>113</p></td>
-			<td class="metal"><p class="mass"></p><h2>Fl</h2><p>114</p></td>
-			<td class="unknown"><p class="mass"></p><h2>Uup</h2><p>115</p></td>
-			<td class="unknown"><p class="mass"></p><h2>Lv</h2><p>116</p></td>
-			<td class="unknown"><p class="mass"></p><h2>Ts</h2><p>117</p></td>
-			<td class="unknown"><p class="mass"></p><h2>Og</h2><p>118</p></td>
+			<td class="transition-metal"><p class="mass">(261)</p><h2>Rf</h2><p>104</p></td>
+			<td class="transition-metal"><p class="mass">(262)</p><h2>Db</h2><p>105</p></td>
+			<td class="transition-metal"><p class="mass">(266)</p><h2>Sg</h2><p>106</p></td>
+			<td class="transition-metal"><p class="mass">(264)</p><h2>Bh</h2><p>107</p></td>
+			<td class="transition-metal"><p class="mass">(277)</p><h2>Hs</h2><p>108</p></td>
+			<td class="unknown"><p class="mass">(276)</p><h2>Mt</h2><p>109</p></td>
+			<td class="unknown"><p class="mass">(281)</p><h2>Ds</h2><p>110</p></td>
+			<td class="unknown"><p class="mass">(280)</p><h2>Rg</h2><p>111</p></td>
+			<td class="transition-metal"><p class="mass">(285)</p><h2>Cn</h2><p>112</p></td>
+			<td class="unknown"><p class="mass">(284)</p><h2>Uut</h2><p>113</p></td>
+			<td class="metal"><p class="mass">(289)</p><h2>Fl</h2><p>114</p></td>
+			<td class="unknown"><p class="mass">(288)</p><h2>Uup</h2><p>115</p></td>
+			<td class="unknown"><p class="mass">(293)</p><h2>Lv</h2><p>116</p></td>
+			<td class="unknown"><p class="mass">(Unknown)</p><h2>Ts</h2><p>117</p></td>
+			<td class="unknown"><p class="mass">(Unknown)</p><h2>Og</h2><p>118</p></td>
 		</tr>
 		<tr>
 			<td><p> </p></td>
@@ -174,40 +181,40 @@
 		<tr>
 			<td colspan="2"></td>
 			<td class="lanthanide"><h2>*</h2></td>
-			<td class="lanthanide"><p class="mass"></p><h2>La</h2><p>57</p></td>
-			<td class="lanthanide"><p class="mass"></p><h2>Ce</h2><p>58</p></td>
-			<td class="lanthanide"><p class="mass"></p><h2>Pr</h2><p>59</p></td>
-			<td class="lanthanide"><p class="mass"></p><h2>Nd</h2><p>60</p></td>
-			<td class="lanthanide"><p class="mass"></p><h2>Pm</h2><p>61</p></td>
-			<td class="lanthanide"><p class="mass"></p><h2>Sm</h2><p>62</p></td>
-			<td class="lanthanide"><p class="mass"></p><h2>Eu</h2><p>63</p></td>
-			<td class="lanthanide"><p class="mass"></p><h2>Gd</h2><p>64</p></td>
-			<td class="lanthanide"><p class="mass"></p><h2>Tb</h2><p>65</p></td>
-			<td class="lanthanide"><p class="mass"></p><h2>Dy</h2><p>66</p></td>
-			<td class="lanthanide"><p class="mass"></p><h2>Ho</h2><p>67</p></td>
-			<td class="lanthanide"><p class="mass"></p><h2>Er</h2><p>68</p></td>
-			<td class="lanthanide"><p class="mass"></p><h2>Tm</h2><p>69</p></td>
-			<td class="lanthanide"><p class="mass"></p><h2>Yb</h2><p>70</p></td>
-			<td class="lanthanide"><p class="mass"></p><h2>Lu</h2><p>71</p></td>
+			<td class="lanthanide"><p class="mass">138.9055</p><h2>La</h2><p>57</p></td>
+			<td class="lanthanide"><p class="mass">140.116</p><h2>Ce</h2><p>58</p></td>
+			<td class="lanthanide"><p class="mass">140.9077</p><h2>Pr</h2><p>59</p></td>
+			<td class="lanthanide"><p class="mass">144.24</p><h2>Nd</h2><p>60</p></td>
+			<td class="lanthanide"><p class="mass">(145)</p><h2>Pm</h2><p>61</p></td>
+			<td class="lanthanide"><p class="mass">150.36</p><h2>Sm</h2><p>62</p></td>
+			<td class="lanthanide"><p class="mass">151.964</p><h2>Eu</h2><p>63</p></td>
+			<td class="lanthanide"><p class="mass">157.25</p><h2>Gd</h2><p>64</p></td>
+			<td class="lanthanide"><p class="mass">158.9253</p><h2>Tb</h2><p>65</p></td>
+			<td class="lanthanide"><p class="mass">162.5</p><h2>Dy</h2><p>66</p></td>
+			<td class="lanthanide"><p class="mass">164.9303</p><h2>Ho</h2><p>67</p></td>
+			<td class="lanthanide"><p class="mass">167.259</p><h2>Er</h2><p>68</p></td>
+			<td class="lanthanide"><p class="mass">168.9342</p><h2>Tm</h2><p>69</p></td>
+			<td class="lanthanide"><p class="mass">173.04</p><h2>Yb</h2><p>70</p></td>
+			<td class="lanthanide"><p class="mass">174.967</p><h2>Lu</h2><p>71</p></td>
 		</tr>
 		<tr>
 			<td colspan="2"></td>
 			<td class="actinide"><h2>**</h2></td>
-			<td class="actinide"><p class="mass"></p><h2>Ac</h2><p>89</p></td>
-			<td class="actinide"><p class="mass"></p><h2>Th</h2><p>90</p></td>
-			<td class="actinide"><p class="mass"></p><h2>Pa</h2><p>91</p></td>
-			<td class="actinide"><p class="mass"></p><h2>U</h2><p>92</p></td>
-			<td class="actinide"><p class="mass"></p><h2>Np</h2><p>93</p></td>
-			<td class="actinide"><p class="mass"></p><h2>Pu</h2><p>94</p></td>
-			<td class="actinide"><p class="mass"></p><h2>Am</h2><p>95</p></td>
-			<td class="actinide"><p class="mass"></p><h2>Cm</h2><p>96</p></td>
-			<td class="actinide"><p class="mass"></p><h2>Bk</h2><p>97</p></td>
-			<td class="actinide"><p class="mass"></p><h2>Cf</h2><p>98</p></td>
-			<td class="actinide"><p class="mass"></p><h2>Es</h2><p>99</p></td>
-			<td class="actinide"><p class="mass"></p><h2>Fm</h2><p>100</p></td>
-			<td class="actinide"><p class="mass"></p><h2>Md</h2><p>101</p></td>
-			<td class="actinide"><p class="mass"></p><h2>No</h2><p>102</p></td>
-			<td class="actinide"><p class="mass"></p><h2>Lr</h2><p>103</p></td>
+			<td class="actinide"><p class="mass">(227)</p><h2>Ac</h2><p>89</p></td>
+			<td class="actinide"><p class="mass">232.0381</p><h2>Th</h2><p>90</p></td>
+			<td class="actinide"><p class="mass">231.0359</p><h2>Pa</h2><p>91</p></td>
+			<td class="actinide"><p class="mass">238.0289</p><h2>U</h2><p>92</p></td>
+			<td class="actinide"><p class="mass">(237)</p><h2>Np</h2><p>93</p></td>
+			<td class="actinide"><p class="mass">(244)</p><h2>Pu</h2><p>94</p></td>
+			<td class="actinide"><p class="mass">(243)</p><h2>Am</h2><p>95</p></td>
+			<td class="actinide"><p class="mass">(247)</p><h2>Cm</h2><p>96</p></td>
+			<td class="actinide"><p class="mass">(247)</p><h2>Bk</h2><p>97</p></td>
+			<td class="actinide"><p class="mass">(251)</p><h2>Cf</h2><p>98</p></td>
+			<td class="actinide"><p class="mass">(252)</p><h2>Es</h2><p>99</p></td>
+			<td class="actinide"><p class="mass">(257)</p><h2>Fm</h2><p>100</p></td>
+			<td class="actinide"><p class="mass">(258)</p><h2>Md</h2><p>101</p></td>
+			<td class="actinide"><p class="mass">(259)</p><h2>No</h2><p>102</p></td>
+			<td class="actinide"><p class="mass">(262)</p><h2>Lr</h2><p>103</p></td>
 		</tr>
 	</table>
 </body>
