--- a/d09/ex03/ex02bis/index.html
+++ b/d09/ex03/ex02bis/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <title>To do or not to do</title>
+  <script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
   <script src="todo.js">
   </script>
 </head>
