--- a/d09/ex03/ex02bis/index.html
+++ b/d09/ex03/ex02bis/index.html
@@ -5,6 +5,25 @@
   <script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
   <script src="todo.js">
   </script>
+  <style>
+    body {
+      background-color: GREY;
+    }
+    h1 {
+      text-align: center;
+    }
+    div {
+      text-align: center;
+    }
+    .todos {
+      width: 500px;
+      background-color: #ffffff;
+      margin: 10% auto;
+      padding: 75px 50px 50px 50px;
+      position: relative;
+      box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+    }
+  </style>
 </head>
 <body>
   <div class="todos">
